# Godzilla

./: CMakeLists.txt  README.md  config.h  error.h  godzilla.h
asm/: gasmengine.cpp  gasmengine.h  gassembler.cpp  gassembler.h  gdisassembler.cpp  gdisassembler.h
base/: ghandle.h  type.h
common/: common.cpp  common.h  gsharer.h  interface.h
file/dexfile/: dexfile.cpp  dexfile.h
hook/: ginterceptor.cpp  ginterceptor.h
interface/: iasmengine.h  irwriter.h
memory/: gprocmemory.cpp  gprocmemory.h
process/: gprocess.cpp  gprocess.h
system/: winsystemdefs.h  winsystemexp.cpp  winsystemexp.h
